# openpipixia

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: CONFIGURATION.md  MCP_SECURITY.md  OPENCLAW_INSTALL_ALIGNMENT.md  OPERATIONS.md  PROJECT_OVERVIEW.md  README.md  REFACTOR_STRUCTURE_PLAN.md
openheron/: __init__.py  browser_playwright_runtime.py  browser_routes.py  browser_runtime.py  browser_schema.py  browser_service.py  cli.py  tools.py
openheron/app/: __init__.py  agent.py  cli.py  gateway.py
openheron/browser/: __init__.py  playwright_runtime.py  routes.py  runtime.py  service.py
openheron/core/: __init__.py  config.py  doctor_rules.py  env_utils.py  exec_policy.py  gui_mcp.py  install_rules.py  logging_utils.py  mcp_registry.py  onboarding_adapters.py  openai_codex_llm.py  provider.py  provider_registry.py  security.py
openheron/gui/: __init__.py  executor.py  mcp_server.py  task_runner.py
openheron/runtime/: debug_callbacks.py  token_usage_store.py  workspace_bootstrap.py
openheron/tooling/: __init__.py  registry.py  skills_adapter.py
openpipixia/app/: cli.py  cli_runtime_ops.py  gateway.py
scripts/: gui_smoke.py  install_smoke.sh  whatsapp_bridge_e2e.sh
sentientagent_v2/: cli.py  config.py  gateway.py  logging_utils.py  mcp_registry.py  provider.py  provider_registry.py  skills.py  tools.py
tests/: test_adk_utils.py  test_agent_mcp.py  test_agent_memory.py  test_browser_e2e_http.py  test_browser_playwright_runtime.py  test_browser_runtime.py  test_browser_schema.py  test_browser_service.py  test_bus_gateway.py  test_channels_factory.py  test_cli.py  test_config.py  test_email_channel.py  test_feishu_channel.py  test_gui_executor.py  test_gui_mcp.py  test_gui_mcp_server.py  test_gui_task_runner.py  test_local_channel.py  test_mcp_registry.py  test_mochat_channel.py  test_openai_codex_llm.py  test_provider.py  test_runtime_cron_service.py  test_runtime_gateway_service.py  test_runtime_memory_service.py  test_runtime_session_service.py  test_runtime_workspace_bootstrap.py  test_security_policy.py  test_skill_scenarios.py  test_skills.py  test_tools.py
workspace/: IDENTITY.md  TOOLS.md
(+33 files in other folders)
